Fixed bootstrap radio buttons - broken on mobilegit add .

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,9 +147,11 @@ textarea {
 
 #settings-btn {
   position: absolute;
-  top: -2px;
+  top: -1px;
   right: 1%;
   transition: all 0.3s ease-in-out;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 #close-modal {
@@ -157,6 +159,17 @@ textarea {
   position: absolute;
   top: 5%;
   right: 5%;
+}
+
+input[type="radio"] {
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 20px;
+  height: 20px;
+  border: 1px solid black;
+  border-radius: 50%;
+  transform: translateY(-3px);
 }
 
 @media (hover:hover) {
